--- a/index.html
+++ b/index.html
@@ -308,14 +308,13 @@
       </div>
 
     </div>
-    <div id="taichi" class="bottom1">
-      <div class="jumbotron jumbotron-fluid bottom1" id="tai">
+      <div class="jumbotron jumbotron-fluid vertical-center bottom1" id="tai">
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2 id="jumbotitle2">
+              <h1 id="jumbotitle2">
                 TAI CHI
-              </h2>
+              </h1>
             </div>
           </div>
           <div class="row">
@@ -339,14 +338,13 @@
           <h1 id="taichiinv" class="invisible">test</h1>
         </div>
       </div>
-      <div id="reiki" class="bottom1">
         <div class="jumbotron jumbotron-fluid bottom1" id="rei">
           <div class="container">
             <div class="row">
               <div class="col">
-                <h2 id="jumbotitle3">
+                <h1 id="jumbotitle3">
                   REIKI
-                </h2>
+                </h1>
               </div>
             </div>
             <div class="row">
@@ -375,7 +373,6 @@
             <h1 id="contactinv" class="invisible">test</h1>
           </div>
         </div>
-      </div>
       <div id="contact">
         <div class="container text-center">
           <div class="row">
