--- a/index - Copy.html
+++ b/index - Copy.html
@@ -160,7 +160,7 @@
         <div class="row">
           <div class="col text-center">
             <button type="button" class="btn btn-primary btn-lg" id="eventsbtn">CONTACT ME</button>
-            <p class="servicedesc text-center">Private lessons are available upon request and I drive to you.<br>
+            <p class="servicedesc text-center" id="info">Private lessons are available upon request and I drive to you.<br>
               Practice Locations: Park or backyard<br>
               Send text or email providing an address or preferred park location and I shall reply with my availability.
             </p>
@@ -229,7 +229,7 @@
 
             </ul>
             <button type="button" class="btn btn-primary btn-lg btn-block">ZOOM LINK</button>
-            <p class="smalltext text-center">
+            <p class="smalltext text-center" id="zoominfo">
               To manually join, the meeting ID is: <br>
               0001 0002 0003<br>
               Passcode: 2331
