--- a/index - Copy.html
+++ b/index - Copy.html
@@ -112,7 +112,7 @@
           <!--END-->
           <div class="col-lg-4">
             <!--Ocean View Column-->
-            <h3 class="service-title">OCEAN VIEW TAI CHI</h3>
+            <h3 class="service-title park">OCEAN VIEW TAI CHI</h3>
             <img src="images/oceanview.png" alt="Ocean View Tai Chi group" class="serviceimg">
             <h5 class="time">Every Saturday 10:45am</h5>
             <p class="servicetext">(Class cancelled in event of rain)</p>
@@ -124,7 +124,7 @@
           <!--END-->
           <div class="col-lg-4">
             <!--Culver City Tai Chi-->
-            <h3 class="service-title">CULVER CITY TAI CHI</h3>
+            <h3 class="service-title park">CULVER CITY TAI CHI</h3>
             <img src="images/culvercity.png" alt="Culver City Tai Chi group" class="serviceimg">
             <h5 class="time">Every Sunday 9:45am</h5>
             <p class="servicetext">(Class cancelled in event of rain)</p>
@@ -148,22 +148,23 @@
               session)</p>
           </div>
           <div class="col-lg-4">
-            <h3 class="service-title">1 ON 1 ZOOM LESSON</h3>
+            <h3 class="service-title priv">1 ON 1 ZOOM LESSON</h3>
             <p class="privserv">Single lesson: $55 for 1 hour<br>
               (Paid in full on first session)<br> Package of 3 lessons: $120<br>(Paid in full on first session)</p>
           </div>
           <div class="col-lg-4">
-            <h3 class="service-title">SPECIAL EVENTS</h3>
+            <h3 class="service-title priv">SPECIAL EVENTS</h3>
             <p class="privserv">Tai Chi for corporate events, health, and wellness fairs, retreats and so forth.</p>
           </div>
         </div>
         <div class="row">
           <div class="col text-center">
-            <button type="button" class="btn btn-primary btn-lg" id="eventsbtn">CONTACT ME</button>
             <p class="servicedesc text-center" id="info">Private lessons are available upon request and I drive to you.<br>
               Practice Locations: Park or backyard<br>
               Send text or email providing an address or preferred park location and I shall reply with my availability.
             </p>
+            <button type="button" class="btn btn-primary btn-lg" id="eventsbtn">CONTACT ME</button>
+            
           </div>
         </div>
         <div class="row">
@@ -186,7 +187,7 @@
               (Paid in full, used within 30 days)<br>
               First single session is half off
             </p>
-            <button type="button" class="btn btn-primary btn-lg blocsm ">CONTACT ME</button>
+            <button type="button" class="btn btn-primary btn-lg blocsm" id="contactmebtn">CONTACT ME</button>
           </div>
         </div>
         <div class="row">
@@ -209,7 +210,7 @@
               <li>Donations welcomed</li>
 
             </ul>
-            <button type="button" class="btn btn-primary btn-lg btn-block">FACEBOOK LIVE</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" id="fblive">FACEBOOK LIVE</button>
           </div>
 
 
@@ -217,7 +218,7 @@
             <h3 class="service-title">
               TAI CHI LEVELS 2 & 3
             </h3>
-            <ul class="servicedesc">
+            <ul class="servicedesc" id="zoomdesc">
               <li>November Dates: Tuesday 3rd, 17th</li>
               <li>December Dates: Tuesday 1st, 15th</li>
               <li>Time 12:12pm PST</li>
@@ -228,7 +229,7 @@
               <li>Donations welcomed</li>
 
             </ul>
-            <button type="button" class="btn btn-primary btn-lg btn-block">ZOOM LINK</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" id="zoombtn">ZOOM LINK</button>
             <p class="smalltext text-center" id="zoominfo">
               To manually join, the meeting ID is: <br>
               0001 0002 0003<br>
