Finished p much all iPhone optimization

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -28,7 +28,7 @@
   <nav nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.png" height="60" alt="Angie Sierra Logo">
+        <img src="images/logo.png" id="navlogo" alt="Angie Sierra Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -159,12 +159,13 @@
         </div>
         <div class="row">
           <div class="col text-center">
-            <p class="servicedesc text-center" id="info">Private lessons are available upon request and I drive to you.<br>
+            <p class="servicedesc text-center" id="info">Private lessons are available upon request and I drive to
+              you.<br>
               Practice Locations: Park or backyard<br>
               Send text or email providing an address or preferred park location and I shall reply with my availability.
             </p>
             <button type="button" class="btn btn-primary btn-lg" id="eventsbtn">CONTACT ME</button>
-            
+
           </div>
         </div>
         <div class="row">
@@ -309,103 +310,112 @@
       </div>
 
     </div>
-      <div class="jumbotron jumbotron-fluid vertical-center bottom1" id="tai">
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <h1 id="jumbotitle2">
-                TAI CHI
-              </h1>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <p id="jumbowords" class="text-center">
-                Learn this beautiful ancient Chinese practice, with graceful meditative movements that help maintain
-                physical health, well-being and spiritual essence.
-
-                <br>Benefits Include:<br>
-                • Relieving physical affects of stress and tension<br>
-                • Reducing anxiety and depression<br>
-                • Improves balance, stability and concentration<br>
-                • Enhances mental capacity and concentration<br>
-                • Promotes serenity, deep breathing and inner peace
-
-              </p>
-            </div>
+    <div class="jumbotron jumbotron-fluid vertical-center bottom1" id="tai">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 id="jumbotitle2">
+              TAI CHI
+            </h1>
           </div>
         </div>
-        <div class="bottom3">
-          <h1 id="taichiinv" class="invisible">test</h1>
-        </div>
-      </div>
-        <div class="jumbotron jumbotron-fluid bottom1" id="rei">
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <h1 id="jumbotitle3">
-                  REIKI
-                </h1>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <p class="text-center jumbowords2">
-                  Reiki, a Japanese word meaning "universal life energy" , is a simple, natural and safe method that
-                  helps cleanse, balance and restore physical and emotional well-being.</p>
+        <div class="row">
+          <div class="col">
+            <p id="jumbowords" class="text-center">
+              Learn this beautiful ancient Chinese practice, with graceful meditative movements that help maintain
+              physical health, well-being and spiritual essence.
 
-                <p class="jumbowords2">Reiki sessions are personalized and may include:<br>
-                  • Setting and accomplishing goals<br>
-                  • Chakra balancing<br>
-                  • Personal Growth and Development<br>
-                  • Holistic Alternatives<br>
-                  • Spirit Life Coaching<br>
-                  • Sage/Smudging you and your home to cleanse, purify and bless your space<br>
-                </p>
+              <br>Benefits Include:<br>
+              • Relieving physical affects of stress and tension<br>
+              • Reducing anxiety and depression<br>
+              • Improves balance, stability and concentration<br>
+              • Enhances mental capacity and concentration<br>
+              • Promotes serenity, deep breathing and inner peace
 
-
-              </div>
-            </div>
-          </div>
-          <div class="bottom3">
-            <h1 id="reikiinv" class="invisible">test</h1>
-          </div>
-          <div class="bottom2">
-            <h1 id="contactinv" class="invisible">test</h1>
-          </div>
-        </div>
-      <div id="contact">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">
-              <h1 class="title">CONTACT</h1>
-              <h3 class="service-title">To schedule a session or inquire about a special event:</h3>
-              <p class="contactp" id="info">Angie Sierra<br>Text (310) 701-1113<br>or email info@angiesierra.com</p>
-              <p class="contactp">Cash, check, Venmo, credit or debit card accepted on the day of our session.<br>
-                Venmo: <a href="#" class="dlink">@angiesierra</a><br>
-                or <br>
-                Through my <a href="#" class="dlink">PayPal link</a><br>
-                (Payment can be made without having a PayPal Account)
-              </p>
-            </div>
+            </p>
           </div>
         </div>
       </div>
-      <footer class="footer">
-        <div class="container">
-          <div class="row" id="footer">
-            <div class="col-lg-6">
-              <a href="#jumbolink"><img src="images/logo.png" height="60" alt="Angie Sierra logo"></a>
-            </div>
-            <div class="col-lg-6 text-right">
-              <a href="https://www.facebook.com/Ang.Sierra"><img src="images/fb-ic.png" class="footeric"></a>
-              <a href="https://www.instagram.com/angiesierra1/"><img src="images/ig-ic.png" class="footeric"></a>
-              <a href="https://www.youtube.com/c/AngieSierra/about"><img src="images/yt-ic.png" class="footeric"></a>
-            </div>
+      <div class="bottom3 invisible">
+        <h1 id="taichiinv" class="invisible">test</h1>
+      </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid bottom1" id="rei">
+      <div class="container" id="reikicont">
+        <div class="row">
+          <div class="col">
+            <h1 id="jumbotitle3">
+              REIKI
+            </h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p class="text-center jumbowords2">
+              Reiki, a Japanese word meaning "universal life energy" , is a simple, natural and safe method that
+              helps cleanse, balance and restore physical and emotional well-being.</p>
+
+            <p class="jumbowords2">Reiki sessions are personalized and may include:<br>
+              • Setting and accomplishing goals<br>
+              • Chakra balancing<br>
+              • Personal Growth and Development<br>
+              • Holistic Alternatives<br>
+              • Spirit Life Coaching<br>
+              • Sage/Smudging you and your home to cleanse, purify and bless your space<br>
+            </p>
+
+
+          </div>
+        </div>
+      </div>
+      <div class="bottom3 invisible">
+        <h1 id="reikiinv" class="invisible">test</h1>
+      </div>
+      <div class="bottom2 invisible">
+        <h1 id="contactinv" class="invisible">test</h1>
+      </div>
+    </div>
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="title">CONTACT</h1>
+            <h3 class="service-title" id="contactsub">To schedule a session or inquire about a special event:</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="contactp" id="angieinfo">Angie Sierra<br>Text (310) 701-1113<br>or email <a href="#"
+                class="dlink">info@angiesierra.com</a></p>
+          </div>
+          <div class="col-md-6">
+            <p class="contactp">Cash, check, Venmo, credit or debit card accepted on the day of our session.<br>
+              Venmo: <a href="#" class="dlink">@angiesierra</a><br>
+              or <br>
+              Through my <a href="#" class="dlink">PayPal link</a><br>
+              (Payment can be made without having a PayPal Account)
+            </p>
           </div>
         </div>
 
-      </footer>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="row" id="footer">
+          <div class="col-lg-6 order-lg-2 text-right" id="footericons">
+            <a href="https://www.facebook.com/Ang.Sierra"><img src="images/fb-ic.png" class="footeric"></a>
+            <a href="https://www.instagram.com/angiesierra1/"><img src="images/ig-ic.png" class="footeric"></a>
+            <a href="https://www.youtube.com/c/AngieSierra/about"><img src="images/yt-ic.png" class="footeric"></a>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <a href="#jumbolink"><img src="images/logo.png" height="60" alt="Angie Sierra logo" id="footerlogo"></a>
+          </div>
+
+        </div>
+      </div>
+
+    </footer>
 
 
 
