--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     href="https://fonts.googleapis.com/css2?family=KoHo:wght@200;300;400;500;600&family=Kodchasan:wght@200;300;400;500&display=swap"
     rel="stylesheet">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="stylex.css">
   <title>Angie Sierra Homepage</title>
 </head>
 
@@ -28,7 +28,7 @@
   <nav nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="images/logo.png" height="60" alt="Angie Sierra Logo">
+        <img src="images/logo.png" id="navlogo" alt="Angie Sierra Logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,10 +65,10 @@
     <div class="jumbotron jumbotron-fluid vertical-center bottom1" id="jumbolink">
       <div class="container" id="jumbocontainer">
         <div class="row">
-          <div class="col-xs-12 col-sm-6" id="abt">
+          <div class="col-md-12 col-lg-6" id="abt">
             <h1 class="jumbotitle">ABOUT ME</h1>
           </div>
-          <div class="col-xs-12 col-sm-6" id="bio">
+          <div class="col-md-12 col-lg-6" id="bio">
             <p class="words">“I’ll never forget the first time I came across Tai Chi. It was at a 5-day silent retreat.
               I
               was walking in nature and noticed a man underneath this beautiful tree moving in a slow graceful,
@@ -83,7 +83,7 @@
 
 
       </div>
-      <div class="bottom2">
+      <div class="bottom2 invisible">
         <h1 id="servicesinv" class="invisible">test</h1>
       </div>
     </div>
@@ -112,7 +112,7 @@
           <!--END-->
           <div class="col-lg-4">
             <!--Ocean View Column-->
-            <h3 class="service-title">OCEAN VIEW TAI CHI</h3>
+            <h3 class="service-title park">OCEAN VIEW TAI CHI</h3>
             <img src="images/oceanview.png" alt="Ocean View Tai Chi group" class="serviceimg">
             <h5 class="time">Every Saturday 10:45am</h5>
             <p class="servicetext">(Class cancelled in event of rain)</p>
@@ -124,7 +124,7 @@
           <!--END-->
           <div class="col-lg-4">
             <!--Culver City Tai Chi-->
-            <h3 class="service-title">CULVER CITY TAI CHI</h3>
+            <h3 class="service-title park">CULVER CITY TAI CHI</h3>
             <img src="images/culvercity.png" alt="Culver City Tai Chi group" class="serviceimg">
             <h5 class="time">Every Sunday 9:45am</h5>
             <p class="servicetext">(Class cancelled in event of rain)</p>
@@ -148,22 +148,24 @@
               session)</p>
           </div>
           <div class="col-lg-4">
-            <h3 class="service-title">1 ON 1 ZOOM LESSON</h3>
+            <h3 class="service-title priv">1 ON 1 ZOOM LESSON</h3>
             <p class="privserv">Single lesson: $55 for 1 hour<br>
               (Paid in full on first session)<br> Package of 3 lessons: $120<br>(Paid in full on first session)</p>
           </div>
           <div class="col-lg-4">
-            <h3 class="service-title">SPECIAL EVENTS</h3>
+            <h3 class="service-title priv">SPECIAL EVENTS</h3>
             <p class="privserv">Tai Chi for corporate events, health, and wellness fairs, retreats and so forth.</p>
           </div>
         </div>
         <div class="row">
           <div class="col text-center">
-            <button type="button" class="btn btn-primary btn-lg" id="eventsbtn">CONTACT ME</button>
-            <p class="servicedesc text-center">Private lessons are available upon request and I drive to you.<br>
+            <p class="servicedesc text-center" id="info">Private lessons are available upon request and I drive to
+              you.<br>
               Practice Locations: Park or backyard<br>
               Send text or email providing an address or preferred park location and I shall reply with my availability.
             </p>
+            <button type="button" class="btn btn-primary btn-lg" id="eventsbtn">CONTACT ME</button>
+
           </div>
         </div>
         <div class="row">
@@ -186,7 +188,7 @@
               (Paid in full, used within 30 days)<br>
               First single session is half off
             </p>
-            <button type="button" class="btn btn-primary btn-lg blocsm ">CONTACT ME</button>
+            <button type="button" class="btn btn-primary btn-lg blocsm" id="contactmebtn">CONTACT ME</button>
           </div>
         </div>
         <div class="row">
@@ -209,7 +211,7 @@
               <li>Donations welcomed</li>
 
             </ul>
-            <button type="button" class="btn btn-primary btn-lg btn-block">FACEBOOK LIVE</button>
+            <button type="button" class="btn btn-primary btn-lg btn-block" id="fblive">FACEBOOK LIVE</button>
           </div>
 
 
@@ -217,7 +219,7 @@
             <h3 class="service-title">
               TAI CHI LEVELS 2 & 3
             </h3>
-            <ul class="servicedesc">
+            <ul class="servicedesc" id="zoomdesc">
               <li>November Dates: Tuesday 3rd, 17th</li>
               <li>December Dates: Tuesday 1st, 15th</li>
               <li>Time 12:12pm PST</li>
@@ -228,8 +230,8 @@
               <li>Donations welcomed</li>
 
             </ul>
-            <button type="button" class="btn btn-primary btn-lg btn-block">ZOOM LINK</button>
-            <p class="smalltext text-center">
+            <button type="button" class="btn btn-primary btn-lg btn-block" id="zoombtn">ZOOM LINK</button>
+            <p class="smalltext text-center" id="zoominfo">
               To manually join, the meeting ID is: <br>
               0001 0002 0003<br>
               Passcode: 2331
@@ -308,103 +310,112 @@
       </div>
 
     </div>
-      <div class="jumbotron jumbotron-fluid vertical-center bottom1" id="tai">
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <h1 id="jumbotitle2">
-                TAI CHI
-              </h1>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <p id="jumbowords" class="text-center">
-                Learn this beautiful ancient Chinese practice, with graceful meditative movements that help maintain
-                physical health, well-being and spiritual essence.
-
-                <br>Benefits Include:<br>
-                • Relieving physical affects of stress and tension<br>
-                • Reducing anxiety and depression<br>
-                • Improves balance, stability and concentration<br>
-                • Enhances mental capacity and concentration<br>
-                • Promotes serenity, deep breathing and inner peace
-
-              </p>
-            </div>
+    <div class="jumbotron jumbotron-fluid vertical-center bottom1" id="tai">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1 id="jumbotitle2">
+              TAI CHI
+            </h1>
           </div>
         </div>
-        <div class="bottom3">
-          <h1 id="taichiinv" class="invisible">test</h1>
-        </div>
-      </div>
-        <div class="jumbotron jumbotron-fluid bottom1" id="rei">
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <h1 id="jumbotitle3">
-                  REIKI
-                </h1>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col">
-                <p class="text-center jumbowords2">
-                  Reiki, a Japanese word meaning "universal life energy" , is a simple, natural and safe method that
-                  helps cleanse, balance and restore physical and emotional well-being.</p>
+        <div class="row">
+          <div class="col">
+            <p id="jumbowords" class="text-center">
+              Learn this beautiful ancient Chinese practice, with graceful meditative movements that help maintain
+              physical health, well-being and spiritual essence.
 
-                <p class="jumbowords2">Reiki sessions are personalized and may include:<br>
-                  • Setting and accomplishing goals<br>
-                  • Chakra balancing<br>
-                  • Personal Growth and Development<br>
-                  • Holistic Alternatives<br>
-                  • Spirit Life Coaching<br>
-                  • Sage/Smudging you and your home to cleanse, purify and bless your space<br>
-                </p>
+              <br>Benefits Include:<br>
+              • Relieving physical affects of stress and tension<br>
+              • Reducing anxiety and depression<br>
+              • Improves balance, stability and concentration<br>
+              • Enhances mental capacity and concentration<br>
+              • Promotes serenity, deep breathing and inner peace
 
-
-              </div>
-            </div>
-          </div>
-          <div class="bottom3">
-            <h1 id="reikiinv" class="invisible">test</h1>
-          </div>
-          <div class="bottom2">
-            <h1 id="contactinv" class="invisible">test</h1>
-          </div>
-        </div>
-      <div id="contact">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col">
-              <h1 class="title">CONTACT</h1>
-              <h3 class="service-title">To schedule a session or inquire about a special event:</h3>
-              <p class="contactp" id="info">Angie Sierra<br>Text (310) 701-1113<br>or email info@angiesierra.com</p>
-              <p class="contactp">Cash, check, Venmo, credit or debit card accepted on the day of our session.<br>
-                Venmo: <a href="#" class="dlink">@angiesierra</a><br>
-                or <br>
-                Through my <a href="#" class="dlink">PayPal link</a><br>
-                (Payment can be made without having a PayPal Account)
-              </p>
-            </div>
+            </p>
           </div>
         </div>
       </div>
-      <footer class="footer">
-        <div class="container">
-          <div class="row" id="footer">
-            <div class="col-lg-6">
-              <a href="#jumbolink"><img src="images/logo.png" height="60" alt="Angie Sierra logo"></a>
-            </div>
-            <div class="col-lg-6 text-right">
-              <a href="https://www.facebook.com/Ang.Sierra"><img src="images/fb-ic.png" class="footeric"></a>
-              <a href="https://www.instagram.com/angiesierra1/"><img src="images/ig-ic.png" class="footeric"></a>
-              <a href="https://www.youtube.com/c/AngieSierra/about"><img src="images/yt-ic.png" class="footeric"></a>
-            </div>
+      <div class="bottom3 invisible">
+        <h1 id="taichiinv" class="invisible">test</h1>
+      </div>
+    </div>
+    <div class="jumbotron jumbotron-fluid bottom1" id="rei">
+      <div class="container" id="reikicont">
+        <div class="row">
+          <div class="col">
+            <h1 id="jumbotitle3">
+              REIKI
+            </h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p class="text-center jumbowords2">
+              Reiki, a Japanese word meaning "universal life energy" , is a simple, natural and safe method that
+              helps cleanse, balance and restore physical and emotional well-being.</p>
+
+            <p class="jumbowords2">Reiki sessions are personalized and may include:<br>
+              • Setting and accomplishing goals<br>
+              • Chakra balancing<br>
+              • Personal Growth and Development<br>
+              • Holistic Alternatives<br>
+              • Spirit Life Coaching<br>
+              • Sage/Smudging you and your home to cleanse, purify and bless your space<br>
+            </p>
+
+
+          </div>
+        </div>
+      </div>
+      <div class="bottom3 invisible">
+        <h1 id="reikiinv" class="invisible">test</h1>
+      </div>
+      <div class="bottom2 invisible">
+        <h1 id="contactinv" class="invisible">test</h1>
+      </div>
+    </div>
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="title">CONTACT</h1>
+            <h3 class="service-title" id="contactsub">To schedule a session or inquire about a special event:</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <p class="contactp" id="angieinfo">Angie Sierra<br>Text (310) 701-1113<br>or email <a href="#"
+                class="dlink">info@angiesierra.com</a></p>
+          </div>
+          <div class="col-md-6">
+            <p class="contactp">Cash, check, Venmo, credit or debit card accepted on the day of our session.<br>
+              Venmo: <a href="#" class="dlink">@angiesierra</a><br>
+              or <br>
+              Through my <a href="#" class="dlink">PayPal link</a><br>
+              (Payment can be made without having a PayPal Account)
+            </p>
           </div>
         </div>
 
-      </footer>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="row" id="footer">
+          <div class="col-lg-6 order-lg-2 text-right" id="footericons">
+            <a href="https://www.facebook.com/Ang.Sierra"><img src="images/fb-ic.png" class="footeric"></a>
+            <a href="https://www.instagram.com/angiesierra1/"><img src="images/ig-ic.png" class="footeric"></a>
+            <a href="https://www.youtube.com/c/AngieSierra/about"><img src="images/yt-ic.png" class="footeric"></a>
+          </div>
+          <div class="col-lg-6 order-lg-1">
+            <a href="#jumbolink"><img src="images/logo.png" height="60" alt="Angie Sierra logo" id="footerlogo"></a>
+          </div>
+
+        </div>
+      </div>
+
+    </footer>
 
 
 
